deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordfrekvenser-deployment
  labels:
    app: ordfrekvenser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ordfrekvenser
  template:
    metadata:
      labels:
        app: ordfrekvenser
    spec:
      containers:
      - name: ordfrekvenser
        image: gcr.io/norwegian-language-bank/ordfrekvenser:b30b02a7-c93c-4085-a774-bc03550e1caf
        command: [ "/bin/bash" ]
        args: [ "-c", "streamlit run dtm_groupings.py --server.port 8501 --server.baseUrlPath /ordfrekvenser --browser.gatherUsageStats=False"]
        ports:
        - containerPort: 8501
        resources:
          limits:
            cpu: 250m
            ephemeral-storage: 256Mi
            memory: 512Mi
          requests:
            cpu: 250m
            ephemeral-storage: 256Mi
            memory: 512Mi
