ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-document-terms
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - secretName: nginx-ingress-secret
    hosts:
     - "beta.nb.no"
  rules:
  - host: "beta.nb.no"
    http:
      paths:
      - pathType: Prefix
        path: "/document-terms"
        backend:
          service:
            name: document-terms-service
            port:
              number: 80
